--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="profile-container">
   <header>
-    <h1>Spendwise</h1>
+    <a routerLink="/" class="nav-link"><h1>Spendwise</h1></a>
     <nav>
       <a routerLink="/dashboard" class="nav-link">Dashboard</a>
       <a routerLink="/spend-ratio" class="nav-link">Spend Ratio</a>
